--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,194 @@
 <!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-<head>
-    <title>My Spotify Playlist</title>
-</head>
-<body>
-    <h1>Playlist Tracks</h1>
-    <ul>
-        {% for track in tracks %}
-            <li>{{ track['track']['name'] }} by {{ track['track']['artists'][0]['name'] }}</li>
-        {% endfor %}
-    </ul>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    </head>
+    <body>
+
+        <div class="sidebar">
+          <div class="logo">
+            <a href="#">
+              <img src="{{ url_for('static', filename='images/icon.png') }}" alt="Logo" />
+            </a>
+          </div>
+    
+          <div class="navigation">
+            <ul>
+              <li>
+                <a href="#">
+                  <span class="fa fa-home"></span>
+                  <span>Sportify</span>
+                </a>
+              </li>
+    
+              <li>
+                <a href="#">
+                  <span class="fa fa-search"></span>
+                  <span>Search</span>
+                </a>
+              </li>
+    
+              <li>
+                <a href="#">
+                  <span class="fa fas fa-book"></span>
+                  <span>Your Library</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+    
+          <div class="navigation">
+            <ul>
+              <li>
+                <a href="#">
+                  <span class="fa fas fa-plus-square"></span>
+                  <span>Create Playlist</span>
+                </a>
+              </li>
+    
+              <!-- <li>
+                <a href="#">
+                  <span class="fa fas fa-heart"></span>
+                  <span>Liked Songs</span>
+                </a>
+              </li> -->
+            </ul>
+          </div>
+    
+          <div class="policies">
+            <ul>
+              <li>
+                <a href="#">Cookies</a>
+              </li>
+              <li>
+                <a href="#">Privacy</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+    
+        <div class="main-container">
+          <div class="topbar">
+            <div class="prev-next-buttons">
+              <!-- <button type="button" class="fa fas fa-chevron-left"></button>
+              <button type="button" class="fa fas fa-chevron-right"></button> -->
+            </div>
+    
+            <div class="navbar">
+              <ul>
+                <li>
+                  <a href="#">Playlists</a>
+                </li>
+                <li>
+                  <a href="#">Support</a>
+                </li>
+                <li>
+                  <a href="#">Download</a>
+                </li>
+                <li class="divider">|</li>
+                <li>
+                  <a href="#">Sign Up</a>
+                </li>
+              </ul>
+              <button type="button">Log In</button>
+            </div>
+          </div>
+    
+          <div class="spotify-playlists">
+            <h2>Your Playlists</h2>
+    
+            <div class="list">
+              <div class="item">
+                <img src="{{ url_for('static', filename='images/1.png') }}" alt="Logo" />
+                <div class="play">
+                  <span class="fa fa-play"></span>
+                </div>
+                <h4>Today's Top Hits</h4>
+                <p>Carti and Gunna are on top of the charts...</p>
+              </div>
+    
+              <div class="item">
+                <a href="{{ url_for('daily_mix_1') }}">
+                  <img src="{{ url_for('static', filename='images/2.jpg') }}" alt="Logo" />
+                  <div class="play">
+                    <span class="fa fa-play"></span>
+                  </div>
+                </a>
+                <h4>Daily Mix 1</h4>
+                <p>New Music from Kendrick, Keem an...</p>
+              </div>
+    
+              <div class="item">
+                <img src="{{ url_for('static', filename='images/3.png') }}" alt="Logo" />
+                <div class="play">
+                  <span class="fa fa-play"></span>
+                </div>
+                <h4>Your Top Songs 2023</h4>
+                <p>Spotify Wrapped presents the songs you...</p>
+              </div>
+    
+          </div>
+          <div>
+            <br>
+            <br>
+
+            <div class="dropdown-search">
+                <h2>Type of Activity:</h2>
+                <div class="search-bar" style="display: flex; align-items: center;">
+                    <select id="activity" name="activity" style="height: 34px; border: none; border-radius: 4px; margin-right: 10px; padding: 0 8px; background-color: #181818; color: #ffffff;">
+                        <option value="traveling">Traveling</option>
+                        <option value="writing">Writing</option>
+                        <option value="drawing">Drawing</option>
+                        <option value="cleaning">Cleaning</option>
+                        <option value="meditating">Meditating</option>
+                        <option value="gardening">Gardening</option>
+                        <option value="shopping">Shopping</option>
+                        <option value="socializing">Socializing</option>
+                        <option value="streaming">Streaming</option>
+                        <option value="daydreaming">Daydreaming</option>
+                        <option value="coding">Coding</option>
+                        <option value="working">Working</option>
+                        <option value="studying">Studying</option>
+                        <option value="cooking">Cooking</option>
+                        <option value="relaxing">Relaxing</option>
+                        <option value="commuting">Commuting</option>
+                        <option value="exercising">Exercising</option>
+                        <option value="gaming">Gaming</option>
+                        <option value="partying">Partying</option>
+                        <option value="sleeping">Sleeping</option>
+
+                        <!-- Add more options as needed -->
+                    </select>
+                    <button type="button">Search</button>
+                    </div>
+                </div>
+            </div>
+
+          <div class="preview">
+            <div class="text">
+              <h6>Preview of Sportify</h6>
+              <p>Click here to get free curated playlists just for you.</p>
+            </div>
+            <div class="button">
+              <button type="button">Get started</button>
+            </div>
+          </div>
+        </div>
+    
+        <script
+          src="https://kit.fontawesome.com/23cecef777.js"
+          crossorigin="anonymous"
+        ></script>
+      </body>
 </html>
