Add creds support for multiple users

--- a/templates/index.html
+++ b/templates/index.html
@@ -119,7 +119,7 @@
               </div>
     
               <div class="item">
-                <a href="{{ url_for('daily_mix_1') }}">
+                <a href="{{ url_for('daily_mix_1', username=username) }}">
                   <img src="{{ url_for('static', filename='images/2.jpg') }}" alt="Logo" />
                   <div class="play">
                     <span class="fa fa-play"></span>
