--- a/templates/playlist.html
+++ b/templates/playlist.html
@@ -17,8 +17,9 @@
     <body>
 
         <div class="sidebar">
+
           <div class="logo">
-            <a href="{{ url_for('index', username=username) }}">
+            <a href="index.html">
               <img src="{{ url_for('static', filename='images/icon.png') }}" alt="Logo" />
             </a>
           </div>
@@ -81,8 +82,7 @@
         <div class="main-container">
           <div class="topbar">
             <div class="prev-next-buttons">
-              <!-- <button type="button" class="fa fas fa-chevron-left"></button>
-              <button type="button" class="fa fas fa-chevron-right"></button> -->
+              <a href="index.html"> <button type="button" class="fa fas fa-chevron-left"></button> </a>
             </div>
     
             <div class="navbar">
